# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  ruff.toml
.github/workflows/: lint.yml
page_analyzer/: app.py  db.py  utils.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/urls/: index.html  show.html
