[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["UsmanSakhbeev <sahbeyev@gmail.com>"]
readme = "README.md"
packages = [
	{include = "page_analyzer"},
]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
